--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <meta name="description" content="Material Design Responsive Activity Indicator">
 <meta property="og:description" content="Material Design Responsive Activity Indicator">
 
-    <link rel="stylesheet" href="activityIndicator-material/src/ac.css">
-    <script src='activityIndicator-material/src/ac.js'> </script>
+    <link rel="stylesheet" href="src/ac.css">
+    <script src='src/ac.js'> </script>
     <script>
       function showMe(){
         activityIndicator.show();
