--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-  <body>
+  <body onload='activityIndicator.show()'>
       <div id="header">
         <nav>
           <li class="fork">
