--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
           <p>Material Design Responsive Activity Indicator</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/tejaswigowda">tejaswigowda</a></span>
+          <span class="credits right">Original implementation by <a href="https://codepen.io/mrrocks/pen/EiplA">Fran Pérez</a></span>
         </div>
 
         <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
