--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Material Design Responsive Activity Indicator">
 <meta property="og:description" content="Material Design Responsive Activity Indicator">
 
+<meta content="width=device-width, initial-scale=1, max-width=device-width, max-scale=1" name="viewport">
     <link rel="stylesheet" href="src/ac.css">
     <script src='src/ac.js'> </script>
     <script>
