--- a/embed.html
+++ b/embed.html
@@ -1,20 +1,12 @@
 <!DOCTYPE html>
 <html style="">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta content="width=device-width, initial-scale=1, max-width=device-width, max-scale=1" name="viewport">
-    <link rel="stylesheet/css" href="https://cdn.jsdelivr.net/npm/activity-indicator-material@1.0.2/ac.min.css">
-    <script src='https://cdn.jsdelivr.net/npm/activity-indicator-material@1.0.2/ac.min.js'>
-    <script>
-      function showMe(){
-        activityIndicator.show();
-      }
-    </script>
-
-    </head>
-    <body style=''>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta content="width=device-width, initial-scale=1, max-width=device-width, max-scale=1" name="viewport">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/activity-indicator-material@1.0.2/ac.css">
+</head>
+<body style=''>
       <div style="position:fixed;top:0;height:100vh;width: 100vw;text-align: center;background-color: rgba(255,255,255,.8);z-index: 100000;" class="ac"><svg class="spinner" width="65px" height="65px" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg" style="margin-top: 45vh;"> <circle class="path" fill="none" stroke-width="6" stroke-linecap="round" cx="33" cy="33" r="30"></circle> </svg></div>
-    </body>
-    <html>    
+</body>
+<html>    
