--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
           <span class="credits right">Original implementation by <a href="https://codepen.io/mrrocks/pen/EiplA">Fran Pérez</a></span>
         </div>
 
+        <iframe src='https://tejaswigowda.github.io/activityIndicator-material/embed.html'></iframe>
         <h2 id="welcome-to-github-pages">Welcome to GitHub Pages</h2>
 
 <p>You can use the <a href="https://github.com/tejaswigowda/activityIndicator-material/edit/master/docs/README.md">editor on GitHub</a> to maintain and preview the content for your website in Markdown files.</p>
