--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <meta property="og:description" content="Material Design Responsive Activity Indicator">
 
 <meta content="width=device-width, initial-scale=1, max-width=device-width, max-scale=1" name="viewport">
-    <link rel="stylesheet" href="src/ac.css">
-    <script src='src/ac.js'> </script>
+    <link rel="stylesheet" href="ac.css">
+    <script src='ac.js'> </script>
     <script>
       function showMe(){
         activityIndicator.show();
