--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
       <section>
         <div id="title">
-          <h1>Material Activity Indicator </h1>
+          <h1>Activity Indicator </h1>
           <p>Material Design Responsive Activity Indicator</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/tejaswigowda">tejaswigowda</a></span>
@@ -48,6 +48,9 @@
 
         <iframe src='https://tejaswigowda.github.io/activityIndicator-material/embed.html'></iframe>
 
+          <li class="fork">
+            <a href="javascript:showMe()">Show Me!</a>
+          </li>
 
       </section>
 
