--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script>
       function showMe(){
         activityIndicator.show();
+        document.body.innerHTML += "<button onclick='activityIndicator.hide()'>activityIndicator.hide()</button>"
       }
     </script>
     <style>
