--- a/index.html
+++ b/index.html
@@ -62,11 +62,27 @@
           <span class="credits right">Original implementation by <a href="https://codepen.io/mrrocks/pen/EiplA">Fran Pérez</a></span>
         </div>
 
-        <iframe src='https://tejaswigowda.github.io/activityIndicator-material/embed.html'></iframe>
-
-          <li class="fork">
-            <a href="javascript:showMe()">Show Me!</a>
+        <h1> Usage </h1>
+        <ol>
+          <li>
+           <a href='https://github.com/tejaswigowda/activityIndicator-material'>Download or clone </a>
+           Include in html
+           <code>
+    <link rel="stylesheet" href="ac.css">
+    <script src='ac.js'> </script>
+           </code>
           </li>
+          <h2> OR </h2>
+          <li>
+          Embed using CDN
+          <code>
+            <script src="https://cdn.jsdelivr.net/npm/activity-indicator-material@1.0.2/ac.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/activity-indicator-material@1.0.2/ac.css">
+          </code>
+          </li>
+        </ol>
+        <iframe style='width: 100%;height: 200px;border: none;' src='https://tejaswigowda.github.io/activityIndicator-material/embed.html'></iframe>
+
 
       </section>
 
