--- a/index.html
+++ b/index.html
@@ -66,6 +66,29 @@
         </div>
 
         <h1> Features </h1>
+        <ul>
+          <li>
+            Lightweight, &lt; 1 kb
+          </li>
+          <li>
+            Responsive, mobile-first.
+          </li>
+          <li>
+            No dependencies + CDN.
+          </li>
+          <li>
+            SVG, hence scalable and crisp.
+          </li>
+          <li>
+            Can be used for websites and apps.
+          </li>
+          <li>
+            Full screen or inline html.
+          </li>
+          <li>
+            Supported by all browsers.
+          </li>
+        </ul>
         <h1> Installation </h1>
         <ol>
           <li>
