--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
   </head>
-  <body>
+  <body style='font-size: 1em'>
       <div id="header">
         <nav>
           <li class="fork">
